typescript/checker/tests/conformance/es6/for-ofStatements/for-of7.ts.stderr
error: UndefinedSymbol {
    sym: Atom('v' type=inline),
    span: Span {
        lo: BytePos(
            15,
        ),
        hi: BytePos(
            16,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of7.ts:2:1
  |
2 | v;
  | ^

